--- a/project/config/Brain_blip_v1_train_single_gpu.yaml
+++ b/project/config/Brain_blip_v1_train_single_gpu.yaml
@@ -1,14 +1,26 @@
 wandb:
-    API_KEY: "d3aa43e2c12e48489b08c4a1ee19de1ff8f88e0f"
+    API_KEY: "e8cb271ec197be5b866d92ce11ae09dd17d513c3"
 
 dataset:
-    img_dir: /scratch/connectome/dhkdgmlghks/ilsan/sample_img
-    meta_dir: /scratch/connectome/dhkdgmlghks/ilsan/meta_data.xlsx
+    img_dir: /storage/lab01/NHIMC_BRAIN_NET/sample/sample_img
+    meta_dir: /storage/lab01/ilsan_brain_infarction/metadata/20240702_전체데이터(가공).xlsx
     add_context: True
     train_size: 0.8
     val_size: 0.1
     test_size: 0.1
+
+prompt:
+    priming: "You are a neurologist and now you are analyzing sDWI b1000 images from subjects who may be diagnosed with stroke."
+    quest: "Question: In the following, what will this subject be diagnosed with? 
+{
+  Lesion : 'Y' or 'N'
+  Injury time : 'Acute' or 'Chronic' or 'Recent' or 'Old'
+  Character: 'infarction' or 'hemorrhage' or 'ICH'
+}"
+    ans_template: "This subject will be diagnosed with"
+    
 model: 
+    checkpoint_path: "/storage/lab01/ilsan_brain_infarction/checkpoints"
     image_encoder:
         vit_model: "eva_clip_g"
         img_size: 128
@@ -28,16 +40,17 @@ model:
 
 training_parameters:
     seed: 1234
-    batch_size: 2
-    accumulation_steps: 16
+    batch_size: 8
+    accumulation_steps: 64
+    num_workers: 32
     optimizer: "AdamW"
     learning_rate: 0.0001
     weight_decay: 0.01
     lr_scheduler: 
 
 pl_trainer: 
-    max_epochs: 100
-    devices: 1 
+    max_epochs: 1
+    devices: 3
     accelerator: 'gpu'
     precision: 'bf16'
     num_nodes: 1
