--- a/project/config/Brain_blip_v1_train_single_gpu_sample.yaml
+++ b/project/config/Brain_blip_v1_train_single_gpu_sample.yaml
@@ -2,8 +2,8 @@ wandb:
     API_KEY: "e8cb271ec197be5b866d92ce11ae09dd17d513c3"
 
 dataset:
-    img_dir: 
-    meta_dir: /storage/lab01/ilsan_brain_infarction/metadata/20240702_전체데이터(가공).xlsx
+    img_dir: /storage/lab01/NHIMC_BRAIN_NET/sample/sample_img
+    meta_dir: /storage/lab01/ilsan_brain_infarction/metadata/20240704_샘플데이터(가공).xlsx
     add_context: True
     train_size: 0.8
     val_size: 0.1
@@ -18,11 +18,13 @@ prompt:
   Character: 'infarction' or 'hemorrhage' or 'ICH'
 }"
     ans_template: "This subject will be diagnosed with"
+    
 model: 
+    checkpoint_path: "/storage/lab01/ilsan_brain_infarction/checkpoints"
     image_encoder:
         vit_model: "eva_clip_g"
-        img_size: 64
-        patch_size: 8
+        img_size: 128
+        patch_size: 16
         drop_path_rate: 0
         use_grad_checkpoint: False
         freeze_vit: True
@@ -38,8 +40,9 @@ model:
 
 training_parameters:
     seed: 1234
-    batch_size: 2
-    accumulation_steps: 16
+    batch_size: 8
+    accumulation_steps: 64
+    num_workers: 32
     optimizer: "AdamW"
     learning_rate: 0.0001
     weight_decay: 0.01
@@ -47,10 +50,10 @@ training_parameters:
 
 pl_trainer: 
     max_epochs: 100
-    devices: 'auto' 
+    devices: 3
     accelerator: 'gpu'
     precision: 'bf16'
-    num_nodes: 2
-    strategy: 'DDP'
+    num_nodes: 1
+    strategy: 'DeepSpeed_Zero3_offload'
     logger: "wandb" 
     log_every_n_steps: 1
