--- a/project/config/Brain_blip_v1_train_single_gpu.yaml
+++ b/project/config/Brain_blip_v1_train_single_gpu.yaml
@@ -20,7 +20,6 @@ prompt:
     ans_template: "This subject will be diagnosed with"
     
 model: 
-    checkpoint_path: "/storage/lab01/ilsan_brain_infarction/checkpoints"
     image_encoder:
         vit_model: "eva_clip_g"
         img_size: 128
@@ -57,3 +56,4 @@ pl_trainer:
     strategy: 'DeepSpeed_Zero3_offload'
     logger: "wandb" 
     log_every_n_steps: 1
+    ckpt_dir: "/storage/lab01/ilsan_brain_infarction/checkpoints"
