--- a/project/config/Brain_blip_v1_train_single_gpu_sample.yaml
+++ b/project/config/Brain_blip_v1_train_single_gpu_sample.yaml
@@ -20,7 +20,6 @@ prompt:
     ans_template: "This subject will be diagnosed with"
     
 model: 
-    checkpoint_path: "/storage/lab01/ilsan_brain_infarction/checkpoints"
     image_encoder:
         vit_model: "eva_clip_g"
         img_size: 128
@@ -40,8 +39,8 @@ model:
 
 training_parameters:
     seed: 1234
-    batch_size: 8
-    accumulation_steps: 64
+    batch_size: 4
+    accumulation_steps: 32
     num_workers: 32
     optimizer: "AdamW"
     learning_rate: 0.0001
@@ -57,3 +56,4 @@ pl_trainer:
     strategy: 'DeepSpeed_Zero3_offload'
     logger: "wandb" 
     log_every_n_steps: 1
+    ckpt_dir: "/storage/lab01/ilsan_brain_infarction/checkpoints/"
