--- a/project/config/Brain_blip_v1_train_single_gpu.yaml
+++ b/project/config/Brain_blip_v1_train_single_gpu.yaml
@@ -2,7 +2,7 @@ wandb:
     API_KEY: "e8cb271ec197be5b866d92ce11ae09dd17d513c3"
 
 dataset:
-    img_dir: /storage/lab01/NHIMC_BRAIN_NET/sample/sample_img
+    img_dir: ""
     meta_dir: /storage/lab01/ilsan_brain_infarction/metadata/20240702_전체데이터(가공).xlsx
     add_context: True
     train_size: 0.8
@@ -39,7 +39,7 @@ model:
 
 training_parameters:
     seed: 1234
-    batch_size: 8
+    batch_size: 4
     accumulation_steps: 64
     num_workers: 32
     optimizer: "AdamW"
@@ -49,11 +49,11 @@ training_parameters:
 
 pl_trainer: 
     max_epochs: 100
-    devices: 3
+    devices: 4
     accelerator: 'gpu'
     precision: 'bf16'
     num_nodes: 1
     strategy: 'DeepSpeed_Zero3_offload'
     logger: "wandb" 
-    log_every_n_steps: 1
+    log_every_n_steps: 10
     ckpt_dir: "/storage/lab01/ilsan_brain_infarction/checkpoints"
